test/constrained-generics/basic/set2/error-dfltimpl-rettype.good
error-dfltimpl-rettype.chpl:9: error: interface function dfltInt with inferred return type
error-dfltimpl-rettype.chpl:9: note: a non-void return type must be declared explicitly
